--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	<body>
 
 		<div id="container"></div>
-		<div id="info"><a href="https://threejs.org" target="_blank" rel="noopener">Wing Man - Fly a hang glider <br />(wind affects your flight path and speed)</div>
+		<div id="info"><a href="https://threejs.org" target="_blank" rel="noopener">Wing Man - Fly a hang glider <br />(Press V to change view | Navigate with your mouse | Wind affects your flight path and speed)</div>
 		
 		<div id="crash-dialog">
 			<h2>You Crashed!</h2>
