--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@
 				});
 
 				stats = new Stats();
-				container.appendChild( stats.dom );
+				// container.appendChild( stats.dom );
 
 				// Initialize flight data with valid values to prevent NaN in GUI
 				// This needs to happen before setupGUI is called
