--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	<body>
 
 		<div id="container"></div>
-		<div id="info">Wing Man - Fly a hang glider <br />(Press V to change view | Navigate with your mouse | Wind affects your flight path and speed)</div>
+		<div id="info">Wing Man - Fly a hang glider <br />(Press V to change view and see your glider | Navigate with your mouse | Wind affects your flight path and speed)<br><small>Click on the glider to claim a country flag or sponsor a glider</small></div>
 		
 		<div id="crash-dialog">
 			<h2>You Crashed!</h2>
